// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGoupEmail Snapshot capturing Snapshot of FormGroupEmail with email 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    htmlFor="email"
  >
    le super label
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control "
      id="email"
      name="email"
      onChange={[Function]}
      required={true}
      type="email"
      value="bob@bob.com"
    />
    <div
      className="input-group-append"
    >
      <span
        className="input-group-text"
      />
    </div>
    <div
      className="invalid-feedback"
    >
      Cet email est déjà utilisé
    </div>
  </div>
</div>
`;

exports[`FormGroupEmail Snapshot capturing Snapshot of FormGroupEmail 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    htmlFor="email"
  >
    le super label
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control "
      id="email"
      name="email"
      onChange={[Function]}
      required={true}
      type="email"
      value=""
    />
    
    <div
      className="invalid-feedback"
    >
      Cet email est déjà utilisé
    </div>
  </div>
</div>
`;
